test/sema/negative/unreachable.impala
fn f() -> i32 {
    return(17);
    42
}
