test/sema/negative/unreachable.output
unreachable.impala:2 col 5 - 14: error: expression does not return. Rendering subsequent statements unreachable
